<resources>
    <string name="app_name">Intrinsic Cafe</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in_to_your_account">Log In To Your Account</string>
    <string name="phone_number">Phone Number: ##########</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Re-Type Password:</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="create_your_account">Create Your Account</string>
    <string name="birthdate_mm_dd_yyyy">Birthdate: MM/DD/YYYY</string>
    <string name="answer">Answer:</string>
    <string name="security_question">Security Question:</string>
    <string name="name">Name:</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="email_question">What is the email on your account?</string>
    <string name="birthdate_question">What is your birthdate?</string>
    <string name="title_activity_landing_page">Welcome!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu">MENU</string>
    <string name="order">ORDER</string>
    <string name="music">MUSIC</string>
    <string name="rewards">REWARDS</string>
    <string name="account">ACCOUNT</string>
    <string name="contactUs">CONTACT US</string>
    <string name="star">\u2605</string>
    <string name="howManyStarsLeft">6 stars until next reward!</string>
    <string name="_4_10">4 / 10</string>
    <string name="welcome">Welcome</string>
    <string name="name_view">Your Name</string>
    <string name="playlist1">Shower Songs</string>
    <string name="playlist2">Intrinsic</string>
    <string name="playlist3">Windflowers</string>
    <string name="playlist4">Morning Commute</string>
    <string name="playlist5">Mellow Morning</string>
    <string name="playlist6">EDM</string>
    <string name="title_activity_spotify">Our Playlists</string>
    <string name="title_activity_contact">Contact Us</string>
    <string name="int_address">5 Sussex Ave, Newark, NJ 07103</string>
    <string name="int_phone">(201) 618-2689</string>
    <string name="int_web">Visit our full site!</string>
    <string name="int_email">intrinsiccafe@gmail.com</string>
    <string name="title_activity_menu">Our Menu</string>
    <string name="title_activity_bubble_tea">Bubble Teas</string>
    <string name="title_activity_brewed_tea">Brewed Teas</string>
    <string name="title_activity_smoothie">Smoothie/Slushies</string>
    <string name="title_activity_menu_milkshake">Milkshakes</string>
    <string name="title_activity_menu_coffee">Coffee/Other Drinks</string>
    <string name="save">Save</string>
    <string name="email">Email:</string>
    <string name="my_account">My Account</string>
    <string name="edit">Edit</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="amount">AMOUNT</string>
    <string name="title_activity_rewards">Your Rewards</string>
    <string name="price">Price</string>
    <string name="price_dollar_sign">Price: $</string>
    <string name="l_a_r_g_e">L A R G E</string>
    <string name="s_m_a_l_l">S M A L L</string>
    <string-array name="quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
