<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@drawable/landing_fresh"
    android:fillViewport="true"
    tools:context="com.intrinsic.cid.intrinsic.LandingPage">

    <android.widget.RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="114dp"
            android:text="@string/my_account"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_below="@+id/user_name_display"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_phone_number"
            android:layout_marginTop="25dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_password"
            android:layout_marginTop="25dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edit_question"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_name"
            android:layout_marginTop="25dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:hint="@string/security_question"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edit_answer"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_question"
            android:layout_marginTop="25dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:hint="@string/answer"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edit_birthday"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_answer"
            android:layout_marginTop="25dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:hint="@string/birthdate_mm_dd_yyyy"
            android:inputType="date"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_birthday"
            android:layout_marginTop="25dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/edit_user"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_below="@+id/edit_email"
            android:layout_centerHorizontal="true"
            android:background="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:text="@string/edit"
            android:textColor="@color/white" />
    </android.widget.RelativeLayout>
</ScrollView>