<?xml version="1.0" encoding="utf-8"?>
    <android.widget.RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_signup_forgot"
        tools:context="com.intrinsic.cid.intrinsic.LoginActivity">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="245dp"
            android:text="@string/log_in_to_your_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/login_text"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/phone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorBasic"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/login_submit"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@color/black"
            android:onClick="landingPage"
            android:text="@string/submit"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/password"
            android:layout_alignRight="@+id/password"
            android:layout_below="@+id/password"
            android:layout_marginTop="9dp"
            android:text="@string/forgot_password" />
    </android.widget.RelativeLayout>
