<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_signup_page"
    tools:context="com.intrinsic.cid.intrinsic.ForgotPassword">

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="245dp"
        android:text="@string/forgot_your_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/retrieve_password_through_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/forgot_password_text"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorBasic"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/security_question"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/retrieve_password_submit"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/retrieve_password_through_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@color/black"
        android:text="@string/submit"
        android:textColor="@color/white" />

</android.widget.RelativeLayout>