<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_signup_forgot"
    tools:context="com.intrinsic.cid.intrinsic.ForgotPassword3">

    <TextView
        android:id="@+id/reset_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="Reset Your Password:"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/reset_password_text"
        android:layout_marginTop="5dp"
        android:background="@color/colorBasic"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/enter_confirmed_password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/enter_password"
        android:layout_marginTop="5dp"
        android:background="@color/colorBasic"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="17sp" />

    <Button
        android:id="@+id/reset_password_submit"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/enter_confirmed_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        android:text="@string/submit"
        android:textColor="@color/white" />

</android.widget.RelativeLayout>